<resources>
    <string name="app_name">Pau Bank</string>
    <string name="bienvenida">Welcome\n</string>
    <string name="inicio">Log in</string>
    <string name="introduceUsuario">Enter your user</string>
    <string name="obligatorio">Required</string>
    <string name="introduceContrasena">Enter your password</string>
    <string name="entrar">Enter</string>
    <string name="salir">Exit</string>
    <string name="welcome_bank">Welcome to my bank</string>
    <string name="entrarBanco">ENTER</string>
    <string name="globalPosition">GLOBAL POSITION</string>
    <string name="movimientos">MOVEMENTS</string>
    <string name="transferencia">TRANSFERS</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="promotions">PROMOTIONS</string>
    <string name="cajeros">CASHIERS</string>
    <string name="exitBank">EXIT</string>
    <string name="buttonDescription">A button that does nothing</string>
    <string name="transfers">Transfers</string>
    <string name="chooseAccount">Choose your account:</string>
    <string name="ownAccount">Own account</string>
    <string name="someoneAccount">Someone\'s account</string>
    <string name="amount">Amount:</string>
    <string name="writeAccount">Write the account number</string>
    <string name="sendJustification">Send justification</string>
    <string name="send">Send</string>
    <string name="cancelar">Cancel</string>
    <string name="movimientosTitulo">Movements</string>
    <string name="seleccionaCuenta">Select an account:</string>
    <string name="ultimosMovimientos">Last movements:</string>
    <string name="movementImageDescription">Receipt image</string>
    <string name="movementText">Receipt 1</string>
    <string name="movementDate">02-01-2024 Amount -73.47</string>
    <string name="saldo">1000.0</string>
    <string name="cuenta">1001-1001-11-1000000001</string>
    <string name="posicionGlobal">Global Position</string>
    <string name="cuentasTotales">Accounts:</string>
    <string name="cambioContrasena">Change Password</string>
    <string name="introduceContrasenaActual">Enter your actual password</string>
    <string name="introduceContrasenaNueva">Enter your new password</string>
    <string name="cambiar">Change</string>
    <string name="detalleMovimiento">Movement\'s detail</string>
    <string name="home">Home</string>
    <string name="bank">My Bank</string>
    <string name="bankContact">contact@mibanco.com</string>
    <string name="promotionsText">Promotions</string>
    <string name="cashiers">Cashiers</string>
    <string name="configuration">Configuration</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_type">All</string>
    <string name="type_0">Type 0</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="conf_multimedia">Media</string>
    <string name="conf_idioma">Language</string>
    <string name="conf_datos">Data</string>
    <string name="conf_musica">Music</string>
    <string name="conf_video">Welcome video</string>
    <string name="conf_idioma_app">App language</string>
    <string name="conf_origen_datos">Data origin</string>
    <string name="conf_musica_off">Don\'t listen to music while the application is running</string>
    <string name="conf_musica_on">Listen to music while the application is running</string>
    <string name="conf_video_off">Don\'t play a video when starting the app</string>
    <string name="conf_video_on">Play a video when starting the app</string>

    <string-array name="divisas">
        <item name="euros">€</item>
        <item name="dolares">$</item>
        <item name="libras">£</item>
    </string-array>

    <string-array name="idioma">
        <item name="espanyol">Spanish</item>
        <item name="ingles">English</item>
    </string-array>

    <string-array name="codigo_idioma">
        <item name="espanyol">ESP</item>
        <item name="ingles">ENG</item>
    </string-array>

    <string-array name="datos">
        <item name="local">Local data</item>
        <item name="web">Web data</item>
    </string-array>

    <string-array name="codigo_datos">
        <item name="local">LOCAL</item>
        <item name="web">WEB</item>
    </string-array>
</resources>