<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />

        <item
            android:id="@+id/item_global_position"
            android:icon="@drawable/icon_position"
            android:title="@string/posicionGlobal" />

        <item
            android:id="@+id/item_movements"
            android:icon="@drawable/icon_movements"
            android:title="@string/movimientosTitulo" />

        <item
            android:id="@+id/item_transfers"
            android:icon="@drawable/icon_transfer"
            android:title="@string/transfers" />

        <item
            android:id="@+id/item_change_password"
            android:icon="@drawable/icon_password"
            android:title="@string/cambioContrasena" />

        <item
            android:id="@+id/item_promotions"
            android:icon="@drawable/icon_promotions"
            android:title="@string/promotionsText" />

        <item
            android:id="@+id/item_cashiers"
            android:icon="@drawable/icon_banks"
            android:title="@string/cashiers" />

        <item
            android:id="@+id/item_configuration"
            android:icon="@drawable/icon_settings"
            android:title="@string/configuration" />

    </group>

    <item android:title="">

        <menu>
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/logout" />
        </menu>

    </item>



</menu>