<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flower"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textoInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/inicio"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        app:helperText="@string/obligatorio"
        app:layout_constraintTop_toBottomOf="@+id/textoInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/introduceUsuario"
            android:maxLength="21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:helperText="@string/obligatorio"
        android:layout_marginTop="80dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario"
        app:layout_constraintEnd_toEndOf="@+id/textUsuario"
        app:layout_constraintStart_toStartOf="@+id/textUsuario" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/introduceContrasena"
            android:maxLength="21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="112dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/textContrasena"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintTop_toBottomOf="@+id/textContrasena" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_marginStart="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="@+id/textContrasena"
        app:layout_constraintTop_toTopOf="@+id/btnEntrar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textoError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        app:layout_constraintStart_toStartOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="@+id/btnSalir" />

</androidx.constraintlayout.widget.ConstraintLayout>