<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/cambioContrasena"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textContrasenaActual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/txtCambiarContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContrasenaActual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/introduceContrasenaActual"
            android:maxLength="21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textContrasenaNueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="80dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/textContrasenaActual"
        app:layout_constraintEnd_toEndOf="@+id/textContrasenaActual"
        app:layout_constraintStart_toStartOf="@+id/textContrasenaActual" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContrasenaNueva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/introduceContrasenaNueva"
            android:maxLength="21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCambiar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="112dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/textContrasenaNueva"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/textContrasenaNueva" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginStart="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/btnCambiar"
        app:layout_constraintEnd_toEndOf="@+id/textContrasenaNueva"
        app:layout_constraintTop_toTopOf="@+id/btnCambiar" />

</androidx.constraintlayout.widget.ConstraintLayout>