<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/imgMovement"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/movementImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMovementName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        tools:text="@string/movementText"
        app:layout_constraintStart_toEndOf="@id/imgMovement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgMovement" />

    <TextView
        android:id="@+id/txtMovementInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:textSize="14sp"
        android:textColor="@color/red"
        tools:text="@string/movementDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgMovement"
        app:layout_constraintBottom_toBottomOf="@id/imgMovement" />

</androidx.constraintlayout.widget.ConstraintLayout>